<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BirthdayApp</string>
    <string name="hello_world">Hello my world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add Contact</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="edit_title">EDIT ME</string>
    <string name="nothing">\?\?\?</string>
    <string name="title_edit_name">Full Name</string>
    <string name="title_edit_email">E-Mail Address</string>   
    <string name="pick_date">Birthdate</string>
    <string name="birthdate">Birthdate</string>
    <string name="action_done">Done</string>
    <string name="action_cancel">Cancel</string>
    <string name="local_service_started">birthday_app_started</string>
    <string name="discard_label">Cancel</string>
    <string name="save_label">Save</string>
    <string name="add_contact_label">+Contact</string>
    <string name="contact_photo">Photo of the person</string>
</resources>
