<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    tools:context="com.example.birthdayapp.EditActivity$PlaceholderFragment" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_edit_name" />

	<EditText
	    android:id="@+id/edit_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nothing"
     />
		
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_edit_email" />

	<EditText
	    android:id="@+id/edit_email"
	    android:inputType="textEmailAddress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nothing"
     />
	
	<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birthdate" />
	
   	<Button 
   	    android:id="@+id/birthdate_button"
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"
	    android:text="" 
	    android:onClick="showDatePickerDialog" />
   	
   	<ImageView
   	    android:id="@+id/contact_photo"
	    android:layout_width="wrap_content" 
	    android:layout_height="wrap_content"
	    android:text="" 
	    android:contentDescription="@string/contact_photo"
	    />
	
</LinearLayout>
